--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 flake8 = "*"
 
 [packages]
-django = "==2.2.5"
+django = "~=2.2"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8.0"
